mercury (2.1.0~rc3-1) unstable; urgency=medium
  [ Alexander Oganezov ]
  * Update to release v2.1.0rc3

 -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Wed, 10 Nov 2021 08:47:42 -0400

mercury (2.1.0~rc2-1) unstable; urgency=medium
  [ Alexander Oganezov ]
  * Update to release v2.1.0rc2

 -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Tue, 12 Oct 2021 08:47:42 -0400

mercury (2.0.1-1) unstable; urgency=medium
  [ Alexander Oganezov ]
  * Update to release v2.0.1

 -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Fri, 14 May 2021 08:47:42 -0400

mercury (2.0.1~rc1-1) unstable; urgency=medium
  [ Alexander Oganezov ]
  * Update to release v2.0.1rc1

 -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Wed, 20 Jan 2021 08:47:42 -0400

mercury (2.0.0-1) unstable; urgency=medium
  [ Alexander Oganezov ]
  * Update to release v2.0.0

 -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Wed, 18 Nov 2020 08:47:42 -0400

mercury (2.0.0~rc3-1) unstable; urgency=medium
  [ Alexander Oganezov ]
  * Update to release v2.0.0rc3

 -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Wed, 28 Oct 2020 08:47:42 -0400

mercury (2.0.0~rc2-1) unstable; urgency=medium
  [ Alexander Oganezov ]
  * Update to release v2.0.0rc2

 -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Mon, 12 Oct 2020 08:47:42 -0400

mercury (2.0.0~rc1-1) unstable; urgency=medium
  [ Brian J. Murrell ]
  * Update to release v2.0.0rc1

 -- Brian J. Murrell <brian.murrell@intel.com>  Tue, 18 Aug 2020 08:47:42 -0400

mercury (1.0.1-21) unstable; urgency=medium
  [ Alexander Oganezov ]
  * Removed sl_patch on top of 7b529b
  * Updated to 9889a0

 -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Mon, 2 Dec 2019 10:17:28 -0400

mercury (1.0.1-20) unstable; urgency=medium
  [ Alexander Oganezov ]
  * sl_patch on top of 7b529b

 -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Thu, 31 Oct 2019 10:17:28 -0400

mercury (1.0.1-19) unstable; urgency=medium