@@ -1,6 +1,7 @@
 mercury (2.1.0~rc3-1) unstable; urgency=medium
   [ Alexander Oganezov ]
   * Update to release v2.1.0rc3
+  * Apply patch workaround for DAOS-8968
 
  -- Alexander Oganezov <alexander.a.oganezov@intel.com>  Wed, 10 Nov 2021 08:47:42 -0400
 
